# engram

./: .gitignore  .npmignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SECURITY.md  ecosystem.config.cjs  ecosystem.config.js  eslint.config.js  package-lock.json  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  desktop-build.yml  publish.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
desktop/: index.html  package-lock.json  package.json  tailwind.config.js
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  main.rs  sidecar.rs  tray.rs
docs/: ARCHITECTURE.md  api.md  mcp-setup.md  pm2-deployment.md
examples/: README.md  api-client.js  basic-usage.js
scripts/: build-sidecar.js
scripts/stubs/: onnxruntime-web.cjs  sharp.cjs
src/: index.js
src/config/: index.js
src/embed/: index.js
src/export/: static.js
src/extract/: rules.js  secrets.js
src/import/: index.js  wizard.js
src/memory/: analytics.js  consolidate.js  context.js  feedback.js  health.js  recall.js  store.js
src/server/: mcp.js  rest.js
src/utils/: format.js  id.js  logger.js  time.js
test/extract/: rules.test.js  secrets.test.js  secrets.test.js.bak
test/fixtures/: sample-memories.json
(+57 files in other folders)
